<resources>
    <string name="app_name">Sammler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">NY, United States</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_search">Search</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_collections">Collections</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_onsale">OnSale</string>
    <string name="nav_chats">Chats</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_signout">Sign Out</string>
    <string name="nav_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="item_details">Item Details</string>
    <string name="like">Like</string>
    <string name="contact">Contact</string>
    <string name="buy">Buy</string>
    <string name="trade">Trade</string>
    <string name="complain">Complain</string>
    <string name="likes">Likes</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="share">Share</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="remove_from_favourites">Remove from favourites</string>
    <string name="edit">Edit</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="delete">Delete</string>
    <string name="create_collection">Create collection</string>
    <string name="add_item">Add item</string>
    <string name="edit_collection">Edit collection</string>
    <string name="edit_item">Edit item</string>
    <string name="delete_all">Delete all</string>
    <string name="q_delete_all_items">Delete all items from collection?</string>
    <string name="q_delete_completely_all_items">Delete completely all items from all collections?</string>
    <string name="action_cannot_be_undone">This action cannot be undone!</string>
    <!--strings for enter_form.xml-->
    <string name="tv_nameProgram">Collections App</string>
    <string name="tv_taglineProgram">Collect anytime, anywhere</string>
    <string name="tv_email">Email address</string>
    <string name="tv_password">Password</string>
    <string name="tv_forgotPassword">Forgot password?</string>
    <string name="b_logIn">Log in</string>
    <string name="login">Login</string>
    <string name="tv_logWithSocialAcc">Or login with social accounts</string>
    <string name="tv_noAccountYet">Don\'t have an account yet?</string>
    <string name="tv_signUp">Sign up now!</string>

    <string name="tv_full_name">Full name</string>
    <string name="tv_place_living">Place of living</string>
    <string name="tv_interest">Intresting in Transform legacy-support-core-utils.aar (androidx.legacy:legacy-support-core-utils:1.0.0) with AarTransform
> Transform circleimageview.aar (de.hdodenhof:circleimageview:3.0.0) with AarTransform
> Transform recyclerview.aar (androidx.recyclerview:recyclerview:1.0.0) with AarTransform
> Transform constraintlayout.aar (androidx.constraintlayout:constraintlayout:1.1.3) with AarTransform</string>
    <string name="tv_likes_value">233</string>
    <string name="tv_items_value">109</string>
    <string name="tv_collections_value">9</string>
    <string name="tv_likes">likes</string>
    <string name="tv_items">items</string>
    <string name="tv_collections">collections</string>
   <!-- <string name="b_complain">Complain</string>-->
    <string name="b_edit">Edit</string>
    <string name="sign_up">Sign up</string>
    <string name = "save_changes">SAVE</string>


    <!-- Server Reference -->
    <string name="base_uri">https://collections-blue.herokuapp.com</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="item_on_sale">Item is on sale</string>
    <string name="item_price">Item price</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="delete_all_collections">Delete all collections</string>
    <string name="edit_exist_collection">Edit collection</string>
    <string name="tv_add_collection">Collection</string>
    <string name="tv_add_item">Item</string>
    <string name="give_title_to_collection">Please give a title to collection</string>
    <string name="title_activity_collection_scrolling">CollectionScrollingActivity</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="title_activity_login">Sammler</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
