<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/nav_search" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_collections"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_collections"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_collections" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/nav_favorites" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_menu_cart"
            android:title="@string/nav_cart" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_menu_chat"
            android:title="@string/nav_chats" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/nav_signout" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_help" />
    </group>

</menu>
