<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:id="@+id/tv_nameProgram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/context_block_margin"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_size_headline" />

    <TextView
        android:id="@+id/tv_taglineProgram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/context_block_margin"
        android:fontFamily="@font/roboto_light_italic"
        android:text="@string/tv_taglineProgram"
        android:textAlignment="center"
        android:textColor="@color/colorGreyDark"
        android:textSize="@dimen/font_size_plain_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_vertical_margin"
        android:fontFamily="@font/roboto_light"
        android:text="@string/tv_forgotPassword"
        android:textAlignment="textEnd"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/font_size_plain_text" />

    <Button
        android:id="@+id/email_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:fontFamily="@font/roboto_light"
        android:text="@string/b_logIn"
        android:textAlignment="center"
        android:textColor="@color/colorGreyDark"
        android:textSize="@dimen/font_size_plain_text" />

    <TextView
        android:id="@+id/tv_logWithSocialAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_vertical_margin"
        android:layout_marginBottom="@dimen/text_vertical_margin"
        android:fontFamily="@font/roboto_light"
        android:text="@string/tv_logWithSocialAcc"
        android:textAlignment="center"
        android:textSize="@dimen/font_size_plain_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_vertical_margin">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:fontFamily="@font/roboto_light"
            android:paddingEnd="@dimen/text_space"
            android:text="@string/tv_noAccountYet"
            android:textAlignment="textEnd"
            android:textSize="@dimen/font_size_plain_text" />

        <TextView
            android:id="@+id/tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_light"
            android:text="@string/tv_signUp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/font_size_plain_text" />
    </LinearLayout>


</LinearLayout>