<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/item_details_like_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/item_details_price"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="20$"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/item_details_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/item_details_name" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/category"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toStartOf="@+id/item_details_category"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_details_name" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/item_details_description"
                app:layout_constraintStart_toStartOf="@+id/item_details_description"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/item_details_name"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toStartOf="@+id/item_details_price"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_details_photo"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed" />

            <ImageView
                android:id="@+id/item_details_photo"
                android:layout_width="395dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="h,3:2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/item_details_category"
                android:layout_width="311dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="TextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView" />

            <TextView
                android:id="@+id/item_details_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="TextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextView"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/item_details_likes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/item_details_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/ic_like"
                android:gravity="center"
                android:text="@string/likes"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/item_details_complain"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_details_description" />

            <TextView
                android:id="@+id/item_details_complain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:drawableEnd="@drawable/ic_flag"
                android:gravity="center"
                android:text="@string/complain"
                app:layout_constraintBaseline_toBaselineOf="@+id/item_details_likes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/item_details_likes" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/item_details_like_button"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="92dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:text="@string/like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/item_details_contact_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/item_details_contact_button"
        android:layout_width="93dp"
        android:layout_height="64dp"
        android:text="@string/contact"
        app:layout_constraintBottom_toBottomOf="@+id/item_details_like_button"
        app:layout_constraintEnd_toStartOf="@+id/item_details_buy_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/item_details_like_button"
        app:layout_constraintTop_toTopOf="@+id/item_details_like_button" />

    <Button
        android:id="@+id/item_details_buy_button"
        android:layout_width="93dp"
        android:layout_height="64dp"
        android:text="@string/buy"
        app:layout_constraintBottom_toBottomOf="@+id/item_details_contact_button"
        app:layout_constraintEnd_toStartOf="@+id/item_details_trade_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/item_details_contact_button"
        app:layout_constraintTop_toTopOf="@+id/item_details_contact_button" />

    <Button
        android:id="@+id/item_details_trade_button"
        android:layout_width="93dp"
        android:layout_height="64dp"
        android:text="@string/trade"
        app:layout_constraintBottom_toBottomOf="@+id/item_details_buy_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/item_details_buy_button"
        app:layout_constraintTop_toTopOf="@+id/item_details_buy_button" />

</androidx.constraintlayout.widget.ConstraintLayout>